==============
lxml changelog
==============

2.0.3 (Under development)
=========================

Features added
--------------

* ``Element.base`` property returns the xml:base or HTML base URL of
  an Element.

* ``docinfo.URL`` property is writable.

Bugs fixed
----------

Other changes
-------------


2.0.2 (2008-02-22)
==================

Features added
--------------

* Support passing ``base_url`` to file parser functions to override
  the filename of the file(-like) object.

Bugs fixed
----------

* The prefix for objectify's pytype namespace was missing from the set
  of default prefixes.

* Memory leak in Schematron (fixed only for libxml2 2.6.31+).

* Error type names in RelaxNG were reported incorrectly.

* Slice deletion bug fixed in objectify.

Other changes
-------------

* Enabled doctests for some Python modules (especially ``lxml.html``).

* Add a ``method`` argument to ``lxml.html.tostring()``
  (``method="xml"`` for XHTML output).

* Make it clearer that methods like ``lxml.html.fromstring()`` take a
  ``base_url`` argument.


2.0.1 (2008-02-13)
==================

Features added
--------------

* Child iteration in ``lxml.pyclasslookup``.

* Loads of new docstrings reflect the signature of functions and
  methods to make them visible in API docs and ``help()``

Bugs fixed
----------

* The module ``lxml.html.builder`` was duplicated as
  ``lxml.htmlbuilder``

* Form elements would return None for ``form.fields.keys()`` if there
  was an unnamed input field.  Now unnamed input fields are completely
  ignored.

* Setting an element slice in objectify could insert slice-overlapping
  elements at the wrong position.

Other changes
-------------

* The generated API documentation was cleaned up and disburdened from
  non-public classes etc.

* The previously public module ``lxml.html.setmixin`` was renamed to
  ``lxml.html._setmixin`` as it is not an official part of lxml.  If
  you want to use it, feel free to copy it over to your own source